# python-hexagonal-example

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: python-ci.yml
src/: config.py  di.py  main.py
src/adapter/inbound/cli/: cli_controller.py
src/adapter/inbound/fastapi/: fastapi_controller.py
src/adapter/outbound/task_repository/: inmemory_task_repository.py
src/app/domain/: exceptions.py
src/app/domain/model/: task.py
src/app/port/inbound/: i_create_task_usecase.py  i_delete_task_usecase.py  i_progress_status_usecase.py  i_show_tasks_usecase.py
src/app/port/outbound/: i_task_repository.py
src/app/usecase/: create_task_usecase.py  delete_task_usecase.py  progress_status_usecase.py  show_tasks_usecase.py
tests/unit/: conftest.py
tests/unit/domain/: test_task.py
tests/unit/usecase/: test_create_task_usecase.py  test_delete_task_usecase.py  test_progress_task_usecase.py  test_show_tasks_usecase.py
